Refine menu functionality. Add minio storage and upload file functionality
